--- a/env.example
+++ b/env.example
@@ -1,17 +1,8 @@
 NODE_ENV=DEVELOPMENT
 
-MYSQL_HOST=localhost
+MYSQL_HOST=172.104.188.248
 MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASS=1234567890
-MYSQL_DB=abc
-MYSQL_DATASTORE=gamehubMysql
-
-MONGO_HOST=localhost
-MONGO_PORT=27017
-MONGO_DB=gamehub
-MONGO_DATASTORE=gamehubMongo
-
-JWT_TOKEN=token
-
-PASSWORD_TOKEN=password_token
+MYSQL_USER=legrand
+MYSQL_PASS=Alfa2024
+MYSQL_DB=htttql
+MYSQL_DATASTORE=legrandMysql
